Add game pages and integrate Appwrite client for session management

--- a/games/index.html
+++ b/games/index.html
@@ -18,6 +18,17 @@
 <body>
  
     <main>
+    <section class="games-content">
+    <h2>Games</h2>
+    <p id ="greeting">Welcome! Choose a game to play.</p>
+    <ul>
+      <li><a href="roulette/">Roulette</a></li>
+      <li><a href="blackjack/">Blackjack</a></li>
+      <li><a href="slots/">Slots</a></li>
+      </ul>
+
+
+    </section>
 
     </main>
       
