Refactor login form to remove action attribute for improved flexibility

--- a/login/index.html
+++ b/login/index.html
@@ -20,7 +20,7 @@
     <main>
         <section class="login-container">
           <h2>Login to Katana</h2>
-          <form action="/login" method="POST" class="login-form">
+          <form class="login-form">
             <div class="input-group">
               <label for="username">Username</label>
               <input type="text" id="username" name="username" placeholder="Enter your username" required>
