Update login form to use email input and remove unnecessary event prevention

--- a/login/index.html
+++ b/login/index.html
@@ -23,7 +23,7 @@
           <form class="login-form">
             <div class="input-group">
               <label for="username">Username</label>
-              <input type="text" id="username" name="username" placeholder="Enter your username" required>
+              <input type="text" id="email" name="email" placeholder="Enter your email" required>
             </div>
             
             <div class="input-group">
