--- a/login/index.html
+++ b/login/index.html
@@ -10,8 +10,8 @@
     <nav>
         <h1>Katana</h1>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="Katana/login/">Login</a></li>
+            <li><a href="Katana/index.html">Home</a></li>
+            <li><a href="">Login</a></li>
         </ul>
     </nav>
 </header>
