--- a/login/index.html
+++ b/login/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katana - Login</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap" rel="stylesheet">
 </head>
 <header>
     <nav>
         <h1>Katana</h1>
         <ul>
-            <li><a href="Katana/index.html">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="">Login</a></li>
         </ul>
     </nav>
