Moved away from ts

--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -25,7 +25,7 @@
     </main>
       
 
-    <script src="script.ts"></script>
+    <script src="script.js"></script>
 </body>
 <footer>
     <p>&copy; 2025 Katana. All rights reserved.</p>
