Add type="module" to script tags in index.html files

--- a/login/index.html
+++ b/login/index.html
@@ -42,7 +42,7 @@
       </main>
       
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 <footer>
     <p>&copy; 2025 Katana. All rights reserved.</p>
