--- a/games/index.html
+++ b/games/index.html
@@ -36,7 +36,7 @@
     </main>
       
 
-    <script src="script.js"></script>
+    <<script src="script.js" type="module"></script>
 </body>
 <footer>
     <p>&copy; 2025 Katana. All rights reserved.</p>
