--- a/login/index.html
+++ b/login/index.html
@@ -13,7 +13,7 @@
     <nav>
         <h1>Katana</h1>
         <ul>
-            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="">Login</a></li>
         </ul>
     </nav>
@@ -25,7 +25,7 @@
           <h2>Login to Katana</h2>
           <form class="login-form">
             <div class="input-group">
-              <label for="username">Username</label>
+              <label id="username">Username</label>
               <input type="text" id="email" name="email" placeholder="Enter your email" required>
             </div>
             
@@ -42,7 +42,7 @@
       </main>
       
 
-    <script src="script.js" type="module"></script>
+    <script src="script.js" type = "module"></script>
 </body>
 <footer>
     <p>&copy; 2025 Katana. All rights reserved.</p>
