--- a/login/index.html
+++ b/login/index.html
@@ -8,13 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/appwrite@17.0.2/" defer></script>
+  <script type="module" src="./script.js"></script>
 </head>
 <header>
     <nav>
         <h1>Katana</h1>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="">Login</a></li>
+            <li><a href="../login/index.html">Login</a></li>
         </ul>
     </nav>
 </header>
