--- a/games/index.html
+++ b/games/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katana - Leaderboard</title>
+    <link rel="icon" type="image/x-icon" href="../icon.svg">
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +37,7 @@
     </main>
       
 
-    <<script src="script.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 </body>
 <footer>
     <p>&copy; 2025 Katana. All rights reserved.</p>
